improve meta-info.env

--- a/examples/meta-info.env
+++ b/examples/meta-info.env
@@ -1,6 +1,6 @@
-FULL_NAME="Test User"
-GEMINI_CAPSULE=gemini://test.com
-WEBSITE=https://test.com
-DESCRIPTION="A Test User"
-EMAIL="test@test.com"
-LOCATION="Some Place"
+FULL_NAME=
+GEMINI_CAPSULE=gemini://REPLACEME.p.projectsegfau.lt
+WEBSITE=https://REPLACEME.p.projectsegfau.lt
+DESCRIPTION=""
+EMAIL=
+LOCATION=
