add matrix & fedi to meta-info

--- a/examples/meta-info.env
+++ b/examples/meta-info.env
@@ -3,4 +3,6 @@ GEMINI_CAPSULE=gemini://REPLACEME.p.projectsegfau.lt
 WEBSITE=https://REPLACEME.p.projectsegfau.lt
 DESCRIPTION=""
 EMAIL=
+MATRIX=
+FEDIVERSE=
 LOCATION=
